--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "~4.16.1",
-    "firebase": "^8.3.0",
+    "express": "^4.16.4",
+    "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mime": "^2.5.2",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
   }
 }
