--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "sonar": "node sonar-project.js"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.8.3",
@@ -20,5 +21,8 @@
     "mime": "^2.5.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "sonarqube-scanner": "^2.8.0"
   }
 }
