--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "sonar": "node sonar-project.js"
+    "sonar": "node sonar-project.js",
+    "test": "mocha"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.8.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -19,8 +21,10 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mime": "^2.5.2",
+    "mocha": "^9.0.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "sonarqube-scanner": "^2.8.0"
