--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "express": "^4.16.4",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mime": "^2.5.2",
     "mocha": "^9.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "request": "^2.88.2"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "salted-md5": "^4.0.2"
   },
   "devDependencies": {
     "sonarqube-scanner": "^2.8.0"
